--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "parcel-project-template",
+  "name": "c",
   "version": "2.0.0",
-  "description": "",
+  "description": "This project was created with Parcel. For familiarization and setting additional features [refer to documentation](https://parceljs.org/).",
   "homepage": "https://Yuliia-Kyivska.github.io/goit-js-hw-11",
   "scripts": {
     "start": "parcel src/*.html",
@@ -30,5 +30,6 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "main": "index.js"
 }
