--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "helpers": "^0.0.6",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
-    "simplelightbox": "^2.14.2"
+    "regenerator-runtime": "^0.14.0",
+    "simplelightbox": "^2.14.2",
+    "tough-cookie": "^4.1.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
