--- a/package.json
+++ b/package.json
@@ -18,15 +18,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "@swc/helpers": "^0.5.2",
-    "axios": "^1.5.1",
-    "dependencies": "^0.0.1",
-    "helpers": "^0.0.6",
+    "axios": "^1.2.0",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6",
-    "regenerator-runtime": "^0.14.0",
-    "simplelightbox": "^2.14.2",
-    "tough-cookie": "^4.1.3"
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.11.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
@@ -35,6 +30,5 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "main": "index.html"
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
